samples/_failures_safe/1761200820_87d7b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a9ca32b.c: In function ‘main’:
./samples/SAFE/__tmp_2a9ca32b.c:132:13: error: expected declaration or statement at end of input
  132 |             fclose(temp);
      |             ^~~~~~
./samples/SAFE/__tmp_2a9ca32b.c:132:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2a9ca32b.c:132:13: error: expected declaration or statement at end of input
